--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12  justify-content-center">
           <div class="social justify-content-center">
             <ul class="list-unstyled justify-content-center">
-              <li><a href="#" title="facebook"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="https://www.facebook.com/pages/category/Event-Planner/Zenextion-Event-and-Marketing-solutions-107280967671534/" title="facebook"><i class="fab fa-facebook-f"></i></a></li>
               <li><a href="#" title="twitter"><i class="fab fa-twitter"></i></a></li>
               <li><a href="#" title="instagram"><i class="fab fa-instagram"></i></a></li>
               <li><a href="#" title="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
