--- a/about.html
+++ b/about.html
@@ -457,7 +457,7 @@
         <div class="footer mb-5">
           <h4 class="text-white mb-4 mt-3"><b>Find Us on Social Media</b></h4>
            <div class="social-icons">
-             <a href="#" title="facebook"><img src="images/fb.png" alt="fb"></a>
+             <a href="https://www.facebook.com/pages/category/Event-Planner/Zenextion-Event-and-Marketing-solutions-107280967671534/" title="facebook"><img src="images/fb.png" alt="fb"></a>
             <a href="#" title="instagram"><img src="images/insta.png" alt="instagram"></a>
              <a href="#" title="linkedin"><img src="images/linkedIn.png" alt="linkedin"></a> 
              <a href="#" title="twitter"><img src="images/twitter.png" alt="twitter"></a> 
