--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     
       <div class="logo d-block">
-      <a class="navbar-brand" href="home.html" title="zenextion events"><img src="images/zenextion_logo.png" alt="Zenextion Event Management Company Logo" width="60" height="60" class="d-inline-block">
+      <a class="navbar-brand" href="index.html" title="zenextion events"><img src="images/zenextion_logo.png" alt="Zenextion Event Management Company Logo" width="60" height="60" class="d-inline-block">
         <img src="images/zenextion_logo-2.png" alt="zenextion Tagline" width="140" height="60" class="d-inline-block">
         </a></div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav ms-auto mb-1 mt-3 mb-lg-0">
             <li class="nav-item text-capitalize">
-              <a class="nav-link" href="home.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item text-capitalize">
               <a class="nav-link active" aria-current="page" href="about.html">Who we are</a>
@@ -439,7 +439,7 @@
         
         <div class="imp-link mb-3">
           <ul class="list-unstyled text">
-            <li class="text-capitalized"><a href="home.html">Home</a></li>
+            <li class="text-capitalized"><a href="index.html">Home</a></li>
             <li class="text-capitalized"><a href="about.html">Who we are</a></li>
             <li class="text-capitalized"><a href="ourwork.html">What We Do</a></li>
             <li class="text-capitalized"><a href="clients.html" >Clients</a></li>
