--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Zenextion | Event & Marketing Solutions...</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2.0">
+    <link rel="icon" type="image/png" href="images/zenextion_logo.png">
     <meta name="description" content="Top Event Agency Out of The Best Corporate Event Management Companies in Mumbai. Get Free Expert Consultation, by Our Event Organizers.">
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
