--- a/btl_portfolio.html
+++ b/btl_portfolio.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Top Event Agency Out of The Best Corporate Event Management Companies in Mumbai. Get Free Expert Consultation, by Our Event Organizers.">
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="images/zenextion_logo.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
