--- a/exhibition_portfolio.html
+++ b/exhibition_portfolio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2.0">
     <meta name="description" content="Top Event Agency Out of The Best Corporate Event Management Companies in Mumbai. Get Free Expert Consultation, by Our Event Organizers.">
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
+    <link rel="icon" type="image/png" href="images/zenextion_logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
