--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2.0">
     <meta name="description" content="Top Event Agency Out of The Best Corporate Event Management Companies in Mumbai. Get Free Expert Consultation, by Our Event Organizers.">
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"/>
+    <link rel="icon" type="image/png" href="images/zenextion_logo.png">
     <meta name="keywords" content="event management companies, corporate event management companies, btl event management companies, advertising agency in india, event management company, event management company in Mumbai, event planners in mumbai, event management companies in Mumbai, corporate event management, event management companies in India">
     <meta name="robots" content="index, follow" />
     <meta name="copyright" content="#" />
