--- a/clients.html
+++ b/clients.html
@@ -272,7 +272,7 @@
               <img src="images/teacher-1.jpg" class="w-60 d-block user-img rounded-circle" alt="clients">
             </div>
             <p class="testimonial-paragraph"> Reliance Commercial & Home Finance is fortunate to partner with Crafworld in current & future assignments… We wish them luck & prosperity !” — Manish Oberoi</p>
-            <h5 class="testimonial-head text-capitalize">John Doe</h5>
+            <h5 class="testimonial-head text-capitalize">Ashwin Oberoi</h5>
           </div>
 
           <div class="carousel-item" data-bs-interval="2000">
@@ -280,7 +280,7 @@
               <img src="images/teacher-2.jpg" class="w-60 d-block user-img rounded-circle" alt="clients">
             </div>
             <p class="testimonial-paragraph">Some representative placeholder content for the second slide.</p> 
-            <h5 class="testimonial-head text-capitalize">Second slide label</h5> 
+            <h5 class="testimonial-head text-capitalize">Shikha Jindal</h5> 
           </div>
 
           <div class="carousel-item">
@@ -288,7 +288,7 @@
               <img src="images/teacher-3.jpg" class="w-60 d-block user-img rounded-circle" alt="clients">
             </div>
             <p class="testimonial-paragraph">Some representative placeholder content for the second slide.</p>
-            <h5 class="testimonial-head text-capitalize">Second slide label</h5>
+            <h5 class="testimonial-head text-capitalize">Suneeta Aggarwal</h5>
           </div>
         </div>
    
