--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
             <div class="img-test">
               <img src="images/teacher-1.jpg" class="w-60 d-block user-img rounded-circle" alt="zenextion clients">
             </div>
-            <p class="testimonial-paragraph"> We are fortunate to partner with Zenextion in current & future assignments… We wish them luck & prosperity !”</p>
-            <h5 class="testimonial-head text-capitalize">Alisa Doe</h5>
+            <p class="testimonial-paragraph"> We are fortunate to partner with Zenextion in current & future assignments… We wish them luck & prosperity !</p>
+            <h5 class="testimonial-head text-capitalize">Ashwin Oberoi</h5>
           </div>
 
           <div class="carousel-item" data-bs-interval="2000">
@@ -500,7 +500,7 @@
               <img src="images/teacher-2.jpg" class="w-60 d-block user-img rounded-circle" alt="zenextion clients">
             </div>
             <p class="testimonial-paragraph">It has been pleasuring to work with Zenextion Events. By fully understanding our company, products and customer base they were able to present us with an effective action plan. Right from conceiving to execution the whole project was simply brilliant</p> 
-            <h5 class="testimonial-head text-capitalize">Clara</h5> 
+            <h5 class="testimonial-head text-capitalize">Shikha Jindal</h5> 
           </div>
 
           <div class="carousel-item">
@@ -508,7 +508,7 @@
               <img src="images/teacher-3.jpg" class="w-60 d-block user-img rounded-circle" alt="zenextion clients">
             </div>
             <p class="testimonial-paragraph">Zenextion evnets were attentive to all our requests, very friendly and ensured a smooth, brilliant execution of the events.</p>
-            <h5 class="testimonial-head text-capitalize">Paula</h5>
+            <h5 class="testimonial-head text-capitalize">Suneeta Aggarwal</h5>
           </div>
         </div>
    
