--- a/clients.html
+++ b/clients.html
@@ -269,25 +269,25 @@
         <div class="carousel-inner carouselTest">
           <div class="carousel-item active" data-bs-interval="10000">
             <div class="img-test">
-              <img src="images/teacher-1.jpg" class="w-60 d-block user-img rounded-circle" alt="clients">
+              <img src="images/testimonial3.png" class="w-60 d-block user-img rounded-circle" alt="clients">
             </div>
-            <p class="testimonial-paragraph"> Reliance Commercial & Home Finance is fortunate to partner with Crafworld in current & future assignments… We wish them luck & prosperity !” — Manish Oberoi</p>
+            <p class="testimonial-paragraph"> We are fortunate to partner with Zenextion in current & future assignments… We wish them luck & prosperity !</p>
             <h5 class="testimonial-head text-capitalize">Ashwin Oberoi</h5>
           </div>
 
           <div class="carousel-item" data-bs-interval="2000">
             <div class="img-test">
-              <img src="images/teacher-2.jpg" class="w-60 d-block user-img rounded-circle" alt="clients">
+              <img src="images/testimonial2.png" class="w-60 d-block user-img rounded-circle" alt="clients">
             </div>
-            <p class="testimonial-paragraph">Some representative placeholder content for the second slide.</p> 
+            <p class="testimonial-paragraph">It has been pleasuring to work with Zenextion Events. By fully understanding our company, products and customer base they were able to present us with an effective action plan. Right from conceiving to execution the whole project was simply brilliant</p> 
             <h5 class="testimonial-head text-capitalize">Shikha Jindal</h5> 
           </div>
 
           <div class="carousel-item">
             <div class="img-test">
-              <img src="images/teacher-3.jpg" class="w-60 d-block user-img rounded-circle" alt="clients">
+              <img src="images/testimonial1.jpg" class="w-60 d-block user-img rounded-circle" alt="clients">
             </div>
-            <p class="testimonial-paragraph">Some representative placeholder content for the second slide.</p>
+            <p class="testimonial-paragraph">Zenextion evnets were attentive to all our requests, very friendly and ensured a smooth, brilliant execution of the events.</p>
             <h5 class="testimonial-head text-capitalize">Suneeta Aggarwal</h5>
           </div>
         </div>
@@ -570,7 +570,7 @@
            <div class="social-icons">
              <a href="#" title="facebook"><img src="images/fb.png" alt="fb"></a>
             <a href="#" title="instagram"><img src="images/insta.png" alt="instagram"></a>
-             <a href="#" title="linkedin"><img src="images/linkedIn.png" alt="linkedin"></a> 
+             <a href="#" title="linkedin"><img src="images/linkedin.png" alt="linkedin"></a> 
              <a href="#" title="twitter"><img src="images/twitter.png" alt="twitter"></a> 
              
             </div>
