--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
            <div class="social-icons">
              <a href="#" title="facebook"><img src="images/fb.png" alt="fb"></a>
             <a href="#" title="instagram"><img src="images/insta.png" alt="instagram"></a>
-             <a href="#" title="linkedin"><img src="images/linkedin.png" alt="linkedin"></a> 
+             <a href="#" title="linkedin"><img src="images/linkedIn.png" alt="linkedin"></a> 
              <a href="#" title="twitter"><img src="images/twitter.png" alt="twitter"></a> 
              
             </div>
