--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12  justify-content-center">
           <div class="social justify-content-center">
             <ul class="list-unstyled justify-content-center">
-              <li><a href="#" title="facebook"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="https://m.facebook.com/107280967671534/" title="facebook"><i class="fab fa-facebook-f"></i></a></li>
               <li><a href="#" title="twitter"><i class="fab fa-twitter"></i></a></li>
               <li><a href="#" title="instagram"><i class="fab fa-instagram"></i></a></li>
               <li><a href="#" title="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
@@ -785,7 +785,7 @@
         <div class="footer mb-5">
           <h4 class="text-white mb-4 mt-3"><b>Find Us on Social Media</b></h4>
            <div class="social-icons">
-             <a href="#" title="facebook"><img src="images/fb.png" alt="fb"></a>
+             <a href="https://m.facebook.com/107280967671534/" title="facebook"><img src="images/fb.png" alt="fb"></a>
             <a href="#" title="instagram"><img src="images/insta.png" alt="instagram"></a>
              <a href="#" title="linkedin"><img src="images/linkedIn.png" alt="linkedin"></a> 
              <a href="#" title="twitter"><img src="images/twitter.png" alt="twitter"></a> 
